Add the two anecdotes : "Les chamois" and "La montée d'Albepierre"

--- a/main.lyx
+++ b/main.lyx
@@ -4209,6 +4209,170 @@ Nous voici à Saint-Flour, en limite de Cantal, pour y découvrir nos prochains
  itinéraires.
 \end_layout
 
+\begin_layout Section*
+Les chamois
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+04/08/2011 -- Mathieu
+\end_layout
+
+\begin_layout Standard
+Aujourd'hui, nous avons gazé ! 7
+\begin_inset space ~
+\end_inset
+
+heures de marche, 1200
+\begin_inset space ~
+\end_inset
+
+mètres de dénivelé positif et 20
+\begin_inset space ~
+\end_inset
+
+kilomètres parcourus.
+ Alors, que nous nous sentons sportifs, ce soir, campant à 1700
+\begin_inset space ~
+\end_inset
+
+mètres d'altitude.
+\end_layout
+
+\begin_layout Standard
+Le nez dans notre boîte de sardines respective, nous ruminons notre fierté
+ et notre contentement.
+ Nous pensons, aussi, à la beauté de ces deux crêtes sur lesquelles nous
+ avons crapahuté, escaladant la plupart de leurs sommets et contemplant
+ -- de toutes parts -- leurs panoramas époustouflants.
+ Sans hésiter, cette journée fut la plus grandiose, en montagne, de nos
+ jeunes vies.
+\end_layout
+
+\begin_layout Standard
+Avec mon dynamisme habituel, j'exhortais Marie -- repue d'efforts et pleine
+ de fatigue -- à aller, juste après le dîner, 
+\begin_inset Quotes fld
+\end_inset
+
+chasser
+\begin_inset Quotes frd
+\end_inset
+
+ le chamois et le bouquetin.
+ Je parlais fort et rapide, faisant de grands gestes brusques et disant
+ que 
+\begin_inset Quotes fld
+\end_inset
+
+non de non, on ne pouvait pas aller si vite au dodo, que c'était in\SpecialChar \nobreakdash-
+dis\SpecialChar \nobreakdash-
+pen\SpecialChar \nobreakdash-
+sable
+ pour son métier de naturaliste de tenter d'observer des animaux, que...
+\begin_inset Quotes frd
+\end_inset
+
+ Je semblais la fatiguer d'avance.
+\end_layout
+
+\begin_layout Standard
+Brusquement, Marie, ne quittant que d'un seul œil sa boîte de sardines,
+ dit avec un ton des plus placide, comme pour m'emmerder : 
+\begin_inset Quotes fld
+\end_inset
+
+Y'en a juste là.
+\begin_inset Quotes frd
+\end_inset
+
+ Effectivement, à 50
+\begin_inset space ~
+\end_inset
+
+mètres devant et à 50
+\begin_inset space ~
+\end_inset
+
+mètres en l'air, sur le sommet tout proche, quatre chamois broutaient l'herbe
+ et faisaient le spectacle.
+ Celui-ci, comme une récompense de plus, dura une bonne demi-heure.
+ Les bestiaux s'avançaient, repartaient, descendaient, sautillaient en remuant
+ la tête...
+\end_layout
+
+\begin_layout Standard
+Quel heureux moment.
+\end_layout
+
+\begin_layout Section*
+La montée d'Albepierre
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+12/08/2011 -- Marie
+\end_layout
+
+\begin_layout Standard
+Ce soir, à 19
+\begin_inset space \thinspace{}
+\end_inset
+
+h
+\begin_inset space \thinspace{}
+\end_inset
+
+30, juste avant le bivouac, c'est une ascension un peu spéciale et folle
+ que nous venons de vivre.
+ Elle fut brève -- 30
+\begin_inset space ~
+\end_inset
+
+minutes -- mais intense.
+\end_layout
+
+\begin_layout Standard
+Nous venions tout juste de ravitailler en eau (6
+\begin_inset space ~
+\end_inset
+
+litres), biscuits (1
+\begin_inset space ~
+\end_inset
+
+kilo) et autres victuailles, mais aussi de prendre une bonne bière et de
+ goûter l'apéro typique du Cantal : l'Avèze.
+\end_layout
+
+\begin_layout Standard
+C'est donc bien chargés, dans les sacs et dans les têtes, que nous nous
+ sommes lancés dans une ascension de 250
+\begin_inset space ~
+\end_inset
+
+mètres de dénivelé, en pleine forêt de résineux.
+ Mathieu, fonçant telle une gazelle devant moi et tenant un paquet de pain
+ de mie en main gauche, motivait ses troupes.
+ Moi, je suivais, le souffle court, ne voyant que mes pieds avec ma tête
+ qui tournait.
+\end_layout
+
+\begin_layout Standard
+Cet après-midi, nous nous étions à demi-lavés et avions enfourché nos sandales.
+ Ce soir, c'est ruisselant de sueur et les pieds tout cochon que nous sommes
+ arrivés à notre lieu de bivouac, une petite clairière d'insectes et d'arbres
+ morts.
+\end_layout
+
+\begin_layout Standard
+Me voilà assise à vous écrire ces quelques mots, alors que Mathieu, en caleçon
+ presque nu, s'affaire -- encore pompette -- à monter la tente et à préparer
+ notre fastueux dîner.
+\end_layout
+
 \begin_layout Chapter*
 Chapitre 3
 \end_layout
